Blog 22 alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -3766,7 +3766,7 @@ footer a:hover {
   overflow: hidden;
   border: 0.2px solid #e3e3e3;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 16px 0 rgba(0, 0, 0, 0.19);
-  height: 600px;
+  height: 650px;
 }
 
 #related-blogs .card-body {
